--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>南科大校巴实时位置(测试中)</title>
+    <title>南科大校巴实时位置</title>
 </head>
 
 <body>
